--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
     "gora_dao": {
       "host": "",
       "network": "testnet",
-      "asc_main_id": 946441472,
-      "asc_main_address": "23QHOYLQJUYXXWKHBZJRQGL45BS6HZNXZ4XBLFYFJDC5B45Z642UL5E2GY",
-      "asc_testnet_main_id": 119642157,
-      "asc_testnet_main_address": "JXOHOM3HQZ6IQ3BY7PGXCKXZTA3RXTTK6SOE7DA4N42T2XYNJGPZNMJLOA",
-      "asc_proposal_id": 320599205,
+      "asc_main_id": 0,
+      "asc_main_address": "",
+      "asc_testnet_main_id": 0,
+      "asc_testnet_main_address": "",
+      "asc_proposal_id": 0,
       "proposal_asa_id": 0,
-      "algo_wallet_address": "UTI7PAASILRDA3ISHY5M7J7LNRX2AIVQJWI7ZKCCGKVLMFD3VPR5PWSZ4I",
+      "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
       "asc_proposal_address": "",
       "algod_remote_server": "https://mainnet-api.algonode.cloud",
       "algod_testnet_remote_server": "https://testnet-api.algonode.cloud",
