--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
       "network": "testnet",
       "asc_main_id": 0,
       "asc_main_address": "",
-      "asc_testnet_main_id": 0,
-      "asc_testnet_main_address": "",
+      "asc_testnet_main_id": 368618628,
+      "asc_testnet_main_address": "KO3T2CGP2TE4JQIB6Z35DU4YXUCZZ6YR34AKLHSCGJ5X3BIJPA6E5GKRCE",
       "asc_proposal_id": 0,
       "proposal_asa_id": 0,
       "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
@@ -26,8 +26,8 @@
       "mode": "remote",
       "deployer_report": false,
       "delete_apps": false,
-      "create_dao_contracts": true,
-      "update_dao_contracts": false,
+      "create_dao_contracts": false,
+      "update_dao_contracts": true,
       "setup_dao_contract": false,
       "test_dao_closeout": false,
       "test_dao_optin": false,
