--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "tweetnacl": "^1.0.3",
     "winston-transport": "^4.5.0",
     "winston-transport-browserconsole": "^1.0.5",
-    "triple-beam": "^1.4.1",
-    "@pinata/sdk": "^2.1.0"
+    "triple-beam": "^1.4.1"
+
   }
 }
