--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "winston-transport": "^4.5.0",
     "winston-transport-browserconsole": "^1.0.5",
     "triple-beam": "^1.4.1",
-    "hi-base32": "^0.5.1"
+    "hi-base32": "^0.5.1",
+    "msgpack-long-lite":"^0.1.1",
+    "algo-msgpack-with-bigint":"^2.1.1"
+
+
 
   }
 }
