small fixes on config

--- a/config.json
+++ b/config.json
@@ -54,8 +54,8 @@
         "proposalBanner": "proposal_banner",
         "proposalDesc":"proposal_desc",
         "proposalTimezone": "proposal_timezone",
-        "proposalAddress": "proposal_address",
-        "proposalNfd": "proposal_address",
+        "proposalAuthor": "proposal_author",
+        "proposalNfd": "proposal_nfd",
         "proposalUrl": "proposal_url",
         "proposalPdf":"proposal_pdf",
         "proposalEmail":"proposal_email",
