--- a/config.json
+++ b/config.json
@@ -30,12 +30,12 @@
       "apps_to_delete": [],
       
       "create_dao_contracts": false,
-      "update_dao_contracts": true,
+      "update_dao_contracts": false,
       "setup_dao_contract": false,
 
 
       "create_proposal_contracts": false,
-      "write_proposal_source_box": false,
+      "write_proposal_source_box": true,
       "update_proposal_contracts": false,
 
       "test_proposal_config": false,
