--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
       "network": "testnet",
       "asc_main_id": 0,
       "asc_main_address": "",
-      "asc_testnet_main_id": 466874344,
-      "asc_testnet_main_address": "C6POX57SJQNFAIO4FVHJ5TSCSKR6ABE2HVP3CUF3DYZAIK4BU3KNYNJXBQ",
+      "asc_testnet_main_id": 0,
+      "asc_testnet_main_address": "",
       "asc_proposal_id": 0,
       "asc_proposal_address": "",
       "proposal_asa_id": 0,
