--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
       "apps_to_delete": [],
       
       "create_dao_contracts": false,
-      "update_dao_contracts": true,
+      "update_dao_contracts": false,
       "create_dao_asset": false,
       "config_dao_contract": true,
 
