--- a/config.json
+++ b/config.json
@@ -33,12 +33,13 @@
       
       "create_dao_contracts": false,
       "update_dao_contracts": false,
-      "create_dao_asset": false,
+      "create_dao_asset": true,
+      "create_dao_proposal_asset": true,
       "config_dao_contract": false,
 
 
       "write_proposal_source_box": false,
-      "create_proposal_contracts": true,
+      "create_proposal_contracts": false,
       "update_proposal_contracts": false,
 
       "test_proposal_config": false,
