--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
       "asc_testnet_main_address": "7M3BC5ROZTWZ4HU4XKSM256AVXE3QMJ33GULD3LGCSE565AY2YR37IQVY4",
       "asc_proposal_id": 0,
       "asc_proposal_address": "",
-      "proposal_asa_id": 468782020,
+      "proposal_asa_id": 479869829,
+      "proposal_proposal_asa_id": 479869851,
       "asc_vesting_id": 0,
       "asc_vesting_address": "",
       
