--- a/ATTICE/gora-stake-delegator/application.json
+++ b/ATTICE/gora-stake-delegator/application.json
@@ -13,7 +13,7 @@
                     "descr": "last update time"
                 },
                 "local_stake": {
-                    "type": "bytes",
+                    "type": "byte",
                     "key": "ls",
                     "descr": "Total stake of address"
                 },
