--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
       "asc_main_address": "",
       "asc_testnet_main_id": 467607348,
       "asc_testnet_main_address": "7M3BC5ROZTWZ4HU4XKSM256AVXE3QMJ33GULD3LGCSE565AY2YR37IQVY4",
-      "asc_proposal_id": 0,
-      "asc_proposal_address": "",
+      "asc_proposal_id": 479951637,
+      "asc_proposal_address": "DW4IOOYOYXLB2K7TNRI5M2FM37XB2ROCCJCRPX2SMGIQIKZOENMX4XULYY",
       "proposal_asa_id": 479869829,
       "proposal_proposal_asa_id": 479869851,
       "asc_vesting_id": 0,
@@ -33,15 +33,15 @@
       "apps_to_delete": [],
       
       "create_dao_contracts": false,
-      "update_dao_contracts": false,
+      "update_dao_contracts": true,
       "write_proposal_source_box": false,
       "create_dao_asset": false,
       "create_dao_proposal_asset": false,
       "config_dao_contract": false,
 
     
-      "create_proposal_contracts": true,
-      "update_proposal_contracts": false,
+      "create_proposal_contracts": false,
+      "update_proposal_contracts": true,
 
       "test_proposal_config": false,
       "test_proposal_activate": false,
