--- a/config.json
+++ b/config.json
@@ -35,14 +35,14 @@
       "create_dao_contracts": false,
       "update_dao_contracts": false,
       "write_proposal_source_box": false,
-      "config_dao_contract": false,
+      "config_dao_contract": true,
 
       "create_dao_asset": false,
       "create_dao_proposal_asset": false,
     
       "create_proposal_contracts": false,
       "update_proposal_contracts": false,
-      "config_proposal_contracts": true,
+      "config_proposal_contracts": false,
 
       "activate_proposal_contracts": false,
       "close_proposal_contracts": false,
