--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
       "asc_main_address": "",
       "asc_testnet_main_id": 480152386,
       "asc_testnet_main_address": "IHE65N6R4FBLY6AZJ76RYD6YG7RDTLE6OMAGSBAWO5A4QDKOJ6ROYHNJXU",
-      "asc_proposal_id": 480412084,
-      "asc_proposal_address": "URUXUN45NCKYYIXAPZDTWKWSAQRULM7UPG6YFBPZIYVJE4G5CVROYANPBQ",
+      "asc_proposal_id": 480588994,
+      "asc_proposal_address": "HB2EAZW6PR7OCNANKKYGSGQ6OSLX3LY23V37EOJG6LTCC6IJBM2IFLUOSE",
       "main_asa_id": 479869829,
       "proposal_asa_id": 479869851,
       "asc_vesting_id": 0,
@@ -37,7 +37,7 @@
       "write_proposal_source_box": false,
       "config_dao_contract": false,
       "subscribe_dao_contract": false,
-      "unsubscribe_dao_contract": true,
+      "unsubscribe_dao_contract": false,
 
       "create_dao_asset": false,
       "create_dao_proposal_asset": false,
@@ -51,9 +51,6 @@
       "participate_proposal_contracts": false,
       "withdraw_participate_proposal_contracts": false,
       "vote_proposal_contracts": false,
-
-
-
 
 
       "num_local_int": 0,
