--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
       "asc_main_address": "",
       "asc_testnet_main_id": 480152386,
       "asc_testnet_main_address": "IHE65N6R4FBLY6AZJ76RYD6YG7RDTLE6OMAGSBAWO5A4QDKOJ6ROYHNJXU",
-      "asc_proposal_id": 480588994,
-      "asc_proposal_address": "HB2EAZW6PR7OCNANKKYGSGQ6OSLX3LY23V37EOJG6LTCC6IJBM2IFLUOSE",
+      "asc_proposal_id": 480633856,
+      "asc_proposal_address": "WY2KGSYTABSGXU2ZTZ4VAHB2GPV2C23MNM6Y6HL3ILVJOFXOKAOVSTVVSI",
       "main_asa_id": 479869829,
       "proposal_asa_id": 479869851,
       "asc_vesting_id": 0,
@@ -48,7 +48,8 @@
 
       "activate_proposal_contracts": false,
       "close_proposal_contracts": false,
-      "participate_proposal_contracts": false,
+
+      "participate_proposal_contracts": true,
       "withdraw_participate_proposal_contracts": false,
       "vote_proposal_contracts": false,
 
