Add withdraw participation

--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
       "apps_to_delete": [],
       
       "create_dao_contracts": false,
-      "update_dao_contracts": false,
+      "update_dao_contracts": true,
       "write_proposal_source_box": false,
       "config_dao_contract": false,
       "subscribe_dao_contract": false,
@@ -49,8 +49,8 @@
       "activate_proposal_contracts": false,
       "close_proposal_contracts": false,
 
-      "participate_proposal_contracts": true,
-      "withdraw_participate_proposal_contracts": false,
+      "participate_proposal_contracts": false,
+      "withdraw_participate_proposal_contracts": true,
       "vote_proposal_contracts": false,
 
 
