--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "triple-beam": "^1.4.1",
     "hi-base32": "^0.5.1",
     "msgpack-long-lite":"^0.1.1",
-    "algo-msgpack-with-bigint":"^2.1.1"
+    "algo-msgpack-with-bigint":"^2.1.1",
+    "inquirer":"8.2.6"
     
   }
 }
