--- a/config.json
+++ b/config.json
@@ -1,86 +1,94 @@
 {
-    "gora_dao": {
-      "host": "",
-      "network": "testnet",
-      "asc_main_id": 0,
-      "asc_main_address": "",
-      "asc_testnet_main_id": 480815999,
-      "asc_testnet_main_address": "7LUT2JW435UWPT6ENDYYSUVG5JKXFWTA5MMG2HJD5GXBTHHVQOABWO5YO4",
-      "asc_proposal_id": 480865574,
-      "asc_proposal_address": "JK4ZMYGA7E56IJWICFNFNAGDEPJKPBOX5RQRCX7VFFHRDZ3QXDQHCFAWBA",
-      "main_asa_id": 479869829,
-      "proposal_asa_id": 479869851,
-      "asc_vesting_id": 0,
-      "asc_vesting_address": "",
-      
-      "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
-      "algod_remote_server": "https://mainnet-api.algonode.cloud",
-      "algod_testnet_remote_server": "https://testnet-api.algonode.cloud",
-      "algod_remote_port": "",
-      "algod_remote_token": "",
-      "indexer_remote_server": "https://mainnet-idx.algonode.cloud",
-      "indexer_testnet_remote_server": "https://testnet-idx.algonode.cloud",
-      "indexer_remote_token": "",
-      "indexer_remote_port": "",
-      "algo_dispenser": "https://dispenser.testnet.aws.algodev.network/?account=",
-      "verbose": false
-    },
-    "emg110":"LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q",
-    "deployer": {
-      "version": "v1.0.0",
-      "mode": "remote",
-      "deployer_report": false,
-      "delete_apps": false,
-      "apps_to_delete": [],
-      "create_dao_contracts": false,
-      "update_dao_contracts": false,
-      "write_proposal_source_box": false,
-      "config_dao_contract": false,
-      "subscribe_dao_contract": false,
-      "unsubscribe_dao_contract": false,
-      "create_dao_asset": false,
-
-      "create_dao_proposal_asset": false,
-      "create_proposal_contracts": false,
-      "update_proposal_contracts": false,
-      "config_proposal_contracts": false,
-
-      "activate_proposal_contracts": false,
-      "close_proposal_contracts": false,
-
-      "participate_proposal_contracts": false,
-      "withdraw_participate_proposal_contracts": false,
-      "vote_proposal_contracts": true,
-
-
-      "num_local_int": 0,
-      "num_local_byte": 0,
-      "num_global_int": 15,
-      "num_global_byte": 15,
-      
-      "proposal": {
-        "proposalName": "proposal_name",
-        "proposalBanner": "proposal_banner",
-        "proposalDesc":"proposal_desc",
-        "proposalTimezone": "proposal_timezone",
-        "proposalAuthor": "proposal_author",
-        "proposalNfd": "proposal_nfd",
-        "proposalUrl": "proposal_url",
-        "proposalPdf":"proposal_pdf",
-        "proposalEmail":"proposal_email",
-        "start": 1661863665,
-        "end": 1661863665,
-        "amount": 10000000,
-        "threshold": 3,
-        "vesting_recurrence": 1,
-        "vesting_period": 2000,
-        "vesting_idle": 1000,
-        "thresholds": [[100,100, 52],[80, 70, 70], [60, 50, 70]],
-        "min_participation": 1000,
-        "min_participation_balance": 3000000,
-        "participation_stake": 1000000,
-        "vote_stake": 1500000
-  
-      }
+  "gora_dao": {
+    "host": "",
+    "network": "testnet",
+    "asc_main_id": 0,
+    "asc_main_address": "",
+    "asc_testnet_main_id": 480815999,
+    "asc_testnet_main_address": "7LUT2JW435UWPT6ENDYYSUVG5JKXFWTA5MMG2HJD5GXBTHHVQOABWO5YO4",
+    "asc_proposal_id": 480865574,
+    "asc_proposal_address": "JK4ZMYGA7E56IJWICFNFNAGDEPJKPBOX5RQRCX7VFFHRDZ3QXDQHCFAWBA",
+    "main_asa_id": 600146432,
+    "proposal_asa_id": 600146441,
+    "asc_vesting_id": 0,
+    "asc_vesting_address": "",
+    "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
+    "algod_remote_server": "https://mainnet-api.algonode.cloud",
+    "algod_testnet_remote_server": "https://testnet-api.algonode.cloud",
+    "algod_remote_port": "",
+    "algod_remote_token": "",
+    "indexer_remote_server": "https://mainnet-idx.algonode.cloud",
+    "indexer_testnet_remote_server": "https://testnet-idx.algonode.cloud",
+    "indexer_remote_token": "",
+    "indexer_remote_port": "",
+    "algo_dispenser": "https://dispenser.testnet.aws.algodev.network/?account=",
+    "verbose": false
+  },
+  "emg110": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q",
+  "deployer": {
+    "version": "v1.0.0",
+    "mode": "remote",
+    "deployer_report": false,
+    "delete_apps": false,
+    "apps_to_delete": [],
+    "create_dao_contracts": false,
+    "update_dao_contracts": false,
+    "write_proposal_source_box": false,
+    "config_dao_contract": false,
+    "subscribe_dao_contract": false,
+    "unsubscribe_dao_contract": false,
+    "create_dao_asset": false,
+    "create_dao_proposal_asset": false,
+    "create_proposal_contracts": false,
+    "update_proposal_contracts": false,
+    "config_proposal_contracts": false,
+    "activate_proposal_contracts": false,
+    "close_proposal_contracts": false,
+    "participate_proposal_contracts": false,
+    "withdraw_participate_proposal_contracts": false,
+    "vote_proposal_contracts": true,
+    "num_local_int": 0,
+    "num_local_byte": 0,
+    "num_global_int": 15,
+    "num_global_byte": 15,
+    "proposal": {
+      "proposalName": "proposal_name",
+      "proposalBanner": "proposal_banner",
+      "proposalDesc": "proposal_desc",
+      "proposalTimezone": "proposal_timezone",
+      "proposalAuthor": "proposal_author",
+      "proposalNfd": "proposal_nfd",
+      "proposalUrl": "proposal_url",
+      "proposalPdf": "proposal_pdf",
+      "proposalEmail": "proposal_email",
+      "start": 1661863665,
+      "end": 1661863665,
+      "amount": 10000000,
+      "threshold": 3,
+      "vesting_recurrence": 1,
+      "vesting_period": 2000,
+      "vesting_idle": 1000,
+      "thresholds": [
+        [
+          100,
+          100,
+          52
+        ],
+        [
+          80,
+          70,
+          70
+        ],
+        [
+          60,
+          50,
+          70
+        ]
+      ],
+      "min_participation": 1000,
+      "min_participation_balance": 3000000,
+      "participation_stake": 1000000,
+      "vote_stake": 1500000
     }
   }
+}
