Interactive CLI dynamism

--- a/config.json
+++ b/config.json
@@ -10,6 +10,17 @@
     "asc_proposal_address": "7AFCQCXXSU4UDHJTLVCKFADJICENL2B64M3OLEK7WAKWMWZZUABBYLZXMA",
     "dao_asa_id": 600146432,
     "proposal_asa_id": 600146441,
+    "dao_dao_deployed": true,
+    "dao_proposal_deployed": true,
+    "dao_asa_distributed": true,
+    "proposal_asa_distributed": true,
+    "subscribed_to_dao": true,
+    "participated_to_proposal": true,
+    "test_user1_voted": true,
+    "test_user2_voted": true,
+    "test_user3_voted": false,
+    "test_user4_voted": false,
+    "test_user5_voted": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
