--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ package-lock.json
 gora_mnemonic0.txt
 gora_mnemonic1.txt
 gora_mnemonic2.txt
+gora_mnemonic3.txt
+gora_mnemonic4.txt
+gora_mnemonic5.txt
+gora_mnemonic6.txt
