Add staking functions to deployer and reset config

--- a/config.json
+++ b/config.json
@@ -4,18 +4,22 @@
     "network": "testnet",
     "asc_main_id": 0,
     "asc_main_address": "",
-    "asc_testnet_main_id": 607180438,
-    "asc_testnet_main_address": "YBGOULQ3USRWWYU7RAUKLMRNHS2KGIEWV3GQAI5QUSEK7BU2NMW7NVYS5U",
-    "asc_proposal_id": 607183585,
-    "asc_proposal_address": "7AFCQCXXSU4UDHJTLVCKFADJICENL2B64M3OLEK7WAKWMWZZUABBYLZXMA",
-    "dao_asa_id": 600146432,
-    "proposal_asa_id": 600146441,
-    "dao_dao_deployed": true,
-    "dao_proposal_deployed": true,
-    "dao_asa_distributed": true,
-    "proposal_asa_distributed": true,
-    "subscribed_to_dao": true,
-    "participated_to_proposal": true,
+    "asc_testnet_main_id": 0,
+    "asc_testnet_main_address": "",
+    "asc_proposal_id": 0,
+    "asc_proposal_address": "",
+    "asc_staking_id": 0,
+    "asc_staking_address": "",
+    "dao_asa_id": 0,
+    "proposal_asa_id": 0,
+    "staking_asa_id": 0,
+    "dao_dao_deployed": false,
+    "dao_proposal_deployed": false,
+    "dao_asa_distributed": false,
+    "proposal_asa_distributed": false,
+    "subscribed_to_dao": false,
+    "participated_to_proposal": false,
+    "participated_to_staking": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "7BJQ2EUCPO4D3AJAJ6ZUCLH64E6X6ZQQTZEP3QICUSSZNWYZLN3RFFU5TE",
@@ -40,11 +44,14 @@
     "create_dao_contracts": false,
     "update_dao_contracts": false,
     "write_proposal_source_box": false,
+    "write_staking_source_box": false,
     "config_dao_contract": false,
     "subscribe_dao_contract": false,
     "unsubscribe_dao_contract": false,
     "create_dao_asset": false,
     "create_dao_proposal_asset": false,
+    "create_dao_staking_asset": false,
+
     "create_proposal_contracts": false,
     "update_proposal_contracts": false,
     "config_proposal_contracts": false,
@@ -53,6 +60,16 @@
     "participate_proposal_contracts": false,
     "withdraw_participate_proposal_contracts": false,
     "vote_proposal_contracts": true,
+
+    "create_staking_contracts": false,
+    "update_staking_contracts": false,
+    "config_staking_contracts": false,
+    "activate_staking_contracts": false,
+    "participate_staking_contracts": false,
+    "withdraw_participate_staking_contracts": false,
+    "stake_staking_contracts": false,
+    "unstake_staking_contracts": false,
+
     "num_local_int": 0,
     "num_local_byte": 0,
     "num_global_int": 15,
@@ -95,6 +112,9 @@
       "min_participation_balance": 3000000,
       "participation_token": 1000000,
       "vote_stake": 1500000
+    },
+    "staking":{
+
     }
   }
 }
