--- a/config.json
+++ b/config.json
@@ -6,15 +6,15 @@
     "asc_main_address": "",
     "asc_testnet_main_id": 684592249,
     "asc_testnet_main_address": "R4B7SVOQUKMJAGXHKMDOT52G5RAXNPKS3P43WCGMBU7DNUXBFDC5HIYTIQ",
-    "asc_proposal_id": 0,
-    "asc_proposal_address": "",
+    "asc_proposal_id": 685371818,
+    "asc_proposal_address": "IRBQ3W3IZQKKD2JIC2SEXYQU7SEKUCB5LHTV47PZ45IZ6ZD525APHWYIPQ",
     "asc_staking_id": 0,
     "asc_staking_address": "",
     "dao_asa_id": 685362420,
-    "proposal_asa_id": 0,
+    "proposal_asa_id": 685369751,
     "staking_asa_id": 0,
     "dao_dao_deployed": true,
-    "dao_proposal_deployed": false,
+    "dao_proposal_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
     "subscribed_to_dao": false,
