--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "dao_asa_distributed": true,
     "proposal_asa_distributed": true,
     "subscribed_to_dao": false,
-    "participated_to_proposal": false,
+    "participated_to_proposal": true,
     "participated_to_staking": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
