--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "proposal_asa_distributed": true,
     "subscribed_to_dao": false,
     "participated_to_proposal": true,
+    "proposal_is_activated": true,
     "participated_to_staking": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
