--- a/config.json
+++ b/config.json
@@ -12,9 +12,10 @@
     "asc_staking_address": "",
     "dao_asa_id": 685362420,
     "proposal_asa_id": 685369751,
-    "staking_asa_id": 0,
+    "staking_asa_id": 685514509,
     "dao_dao_deployed": true,
     "dao_proposal_deployed": true,
+    "dao_staking_deployed": false,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": true,
     "subscribed_to_dao": false,
