Create Staking OK

--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "asc_testnet_main_address": "R4B7SVOQUKMJAGXHKMDOT52G5RAXNPKS3P43WCGMBU7DNUXBFDC5HIYTIQ",
     "asc_proposal_id": 685371818,
     "asc_proposal_address": "IRBQ3W3IZQKKD2JIC2SEXYQU7SEKUCB5LHTV47PZ45IZ6ZD525APHWYIPQ",
-    "asc_staking_id": 0,
-    "asc_staking_address": "",
+    "asc_staking_id": 685597457,
+    "asc_staking_address": "7XDTUFHXUFIJJFDZ67FIHMIQPHPW6SNWAO5ZD63KEK72TUWKUBIDRZQJYI",
     "dao_asa_id": 685362420,
     "proposal_asa_id": 685369751,
     "staking_asa_id": 685514509,
