--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "staking_asa_id": 685514509,
     "dao_dao_deployed": true,
     "dao_proposal_deployed": true,
-    "dao_staking_deployed": false,
+    "dao_staking_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": true,
     "subscribed_to_dao": false,
