--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
     "subscribed_to_dao": false,
     "participated_to_proposal": true,
     "proposal_is_activated": true,
-    "staking_is_activated": false,
+    "staking_is_activated": true,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "",
