Prepared non-interactive mode and add new proxy staking function calls

--- a/config.json
+++ b/config.json
@@ -62,7 +62,7 @@
     "close_proposal_contracts": false,
     "participate_proposal_contracts": false,
     "withdraw_participate_proposal_contracts": false,
-    "vote_proposal_contracts": true,
+    "vote_proposal_contracts": false,
     "create_staking_contracts": false,
     "update_staking_contracts": false,
     "config_staking_contracts": false,
@@ -71,6 +71,9 @@
     "withdraw_participate_staking_contracts": false,
     "stake_staking_contracts": false,
     "unstake_staking_contracts": false,
+    "optin_proxy_staking_contracts": false,
+    "stake_proxy_staking_contracts": false,
+    "unstake_proxy_staking_contracts": false,
     "num_local_int": 0,
     "num_local_byte": 0,
     "num_global_int": 15,
