--- a/config.json
+++ b/config.json
@@ -117,6 +117,21 @@
       "participation_token": 1000000,
       "vote_stake": 1500000
     },
-    "staking": {}
+    "staking": {
+      "staking_min_participation_algo": 1000,
+      "staking_min_participation_token" : 1000000,
+      "staking_duration"  : 1000,
+      "staking_min_duration"  : 1000,
+      "staking_commission_percentage" : 100,
+      "staking_commission_percentage_algo"  : 100,
+      "staking_participation_fee" : 100,
+      "staking_participation_fee_algo"  : 100,
+      "staking_incentives_percentage" : 100,
+      "staking_incentives_percentage_algo"  : 100,
+      "staking_type"  : "staking_type",
+      "staking_incentives_duration" : 1000,
+      "staking_return_percentage" : 100,
+      "staking_return_percentage_algo"  : 100
+    }
   }
 }
