--- a/config.json
+++ b/config.json
@@ -4,27 +4,27 @@
     "network": "testnet",
     "asc_main_id": 0,
     "asc_main_address": "",
-    "gora_token_id":227418519,
+    "gora_testnet_token_id":227418519,
     "enforce_gora_token":true,
-    "asc_testnet_main_id": 684592249,
-    "asc_testnet_main_address": "R4B7SVOQUKMJAGXHKMDOT52G5RAXNPKS3P43WCGMBU7DNUXBFDC5HIYTIQ",
-    "asc_proposal_id": 685371818,
-    "asc_proposal_address": "IRBQ3W3IZQKKD2JIC2SEXYQU7SEKUCB5LHTV47PZ45IZ6ZD525APHWYIPQ",
-    "asc_staking_id": 707190057,
-    "asc_staking_address": "RQ3YJWGMLZEPUIBPI2RLR67HPJPFWYPQJKZTMRYWUI6MWHA72ESVKNDAFY",
-    "dao_asa_id": 685362420,
-    "proposal_asa_id": 685369751,
-    "staking_asa_id": 685514509,
-    "dao_dao_deployed": true,
-    "dao_proposal_deployed": true,
-    "dao_staking_deployed": true,
-    "dao_asa_distributed": true,
-    "proposal_asa_distributed": true,
-    "staking_asa_distributed": true,
+    "asc_testnet_main_id": 0,
+    "asc_testnet_main_address": "",
+    "asc_proposal_id": 0,
+    "asc_proposal_address": "",
+    "asc_staking_id": 0,
+    "asc_staking_address": "",
+    "dao_asa_id": 0,
+    "proposal_asa_id": 0,
+    "staking_asa_id": 0,
+    "dao_dao_deployed": false,
+    "dao_proposal_deployed": false,
+    "dao_staking_deployed": false,
+    "dao_asa_distributed": false,
+    "proposal_asa_distributed": false,
+    "staking_asa_distributed": false,
     "subscribed_to_dao": false,
-    "participated_to_proposal": true,
-    "proposal_is_activated": true,
-    "staking_is_activated": true,
+    "participated_to_proposal": false,
+    "proposal_is_activated": false,
+    "staking_is_activated": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "",
