--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "asc_proposal_address": "",
     "asc_staking_id": 0,
     "asc_staking_address": "",
-    "dao_asa_id": 0,
+    "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 0,
     "dao_dao_deployed": false,
