Update to staking smart contracts

--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "asc_main_address": "",
     "gora_testnet_token_id": 227418519,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 0,
-    "asc_testnet_main_address": "",
+    "asc_testnet_main_id": 715367604,
+    "asc_testnet_main_address": "SZMYS22VDJGY3QLSWF3EWCYSYXDEUAPYSOMZXVIYCR2OHSPJJAFMP4MUGU",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_staking_id": 0,
@@ -15,7 +15,7 @@
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 0,
-    "dao_dao_deployed": false,
+    "dao_dao_deployed": true,
     "dao_proposal_deployed": false,
     "dao_staking_deployed": false,
     "dao_asa_distributed": false,
@@ -76,8 +76,8 @@
     "optin_proxy_staking_contracts": false,
     "stake_proxy_staking_contracts": false,
     "unstake_proxy_staking_contracts": false,
-    "num_local_int": 0,
-    "num_local_byte": 0,
+    "num_local_int": 3,
+    "num_local_byte": 2,
     "num_global_int": 15,
     "num_global_byte": 15,
     "proposal": {
