Rearranged GoraDAO asset distribution

--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "asc_main_address": "",
     "gora_testnet_token_id": 227418519,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 715367604,
-    "asc_testnet_main_address": "SZMYS22VDJGY3QLSWF3EWCYSYXDEUAPYSOMZXVIYCR2OHSPJJAFMP4MUGU",
+    "asc_testnet_main_id": 715545607,
+    "asc_testnet_main_address": "PMCMYIIWLDXSTCEA44V76IG3IYYUVM3G2HLKWM3MFDCMVNH3TFKBKPK7XM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_staking_id": 0,
@@ -18,7 +18,7 @@
     "dao_dao_deployed": true,
     "dao_proposal_deployed": false,
     "dao_staking_deployed": false,
-    "dao_asa_distributed": false,
+    "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
     "staking_asa_distributed": false,
     "subscribed_to_dao": false,
