--- a/config.json
+++ b/config.json
@@ -10,14 +10,14 @@
     "asc_testnet_main_address": "PMCMYIIWLDXSTCEA44V76IG3IYYUVM3G2HLKWM3MFDCMVNH3TFKBKPK7XM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 0,
-    "asc_staking_address": "",
+    "asc_staking_id": 715554669,
+    "asc_staking_address": "26T4UQKJOYGIGASML6CQYCRFH2VKRLFFGKPS4RAPSYGOOWNPOG7Y3DVMBY",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
-    "staking_asa_id": 0,
+    "staking_asa_id": 227418519,
     "dao_dao_deployed": true,
     "dao_proposal_deployed": false,
-    "dao_staking_deployed": false,
+    "dao_staking_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
     "staking_asa_distributed": false,
