--- a/config.json
+++ b/config.json
@@ -20,11 +20,11 @@
     "dao_staking_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
-    "staking_asa_distributed": false,
+    "staking_asa_distributed": true,
     "subscribed_to_dao": false,
     "participated_to_proposal": false,
     "proposal_is_activated": false,
-    "staking_is_activated": false,
+    "staking_is_activated": true,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "",
