--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ gora_mnemonic3.txt
 gora_mnemonic4.txt
 gora_mnemonic5.txt
 gora_mnemonic6.txt
+gora_mnemonic7.txt
 /mnemonics
 /mnemonics/*
 gora_testnet_master_mnemonic.txt
